BackEnd parte de archivos listo

--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -10,12 +10,16 @@
   "UserSettings": {
     "Server": "mongodb://127.0.0.1:27017",
     "Database": "dbBlockchain",
-    "Collection": "dbCollectionBlockchain",
+    "Collection": "dbCollectionBlockchain"
   },
   "ConfigurationSetting": {
     "Server": "mongodb://127.0.0.1:27017",
     "Database": "dbBlockchain",
     "Collection": "dbCollectionConfiguration"
-
+  },
+  "MemPoolSettings": {
+    "Server": "mongodb://127.0.0.1:27017",
+    "Database": "dbBlockchain",
+    "Collection": "dbCollectionMemPool"
   }
 }
