--- a/BackEnd/BackEnd/appsettings.json
+++ b/BackEnd/BackEnd/appsettings.json
@@ -21,5 +21,10 @@
     "Server": "mongodb://127.0.0.1:27017",
     "Database": "dbBlockchain",
     "Collection": "dbCollectionMemPool"
+  },
+  "BlockSettings": {
+    "Server": "mongodb://127.0.0.1:27017",
+    "Database": "dbBlockchain",
+    "Collection": "dbCollectionBlock"
   }
 }
